--- a/docs/style.css
+++ b/docs/style.css
@@ -1,7 +1,10 @@
 body { 
     font-family: Arial, sans-serif; 
-    max-width: 1000px; margin: 0em auto;
+    line-height: 1.6;
+    max-width: 800px; margin: 2em auto;
     padding: 0 1em; 
+    background-color: #fdfdfd;
+    color: #333;
 }
 h1 { 
     color: #074d63; 
@@ -11,6 +14,9 @@ h1 {
 h2 { 
     font-weight: 400;
     font-size: 2em;
+}
+h3 { 
+    font-weight: 400;
 }
 pre {
     background-color: #f5f5f5;
@@ -27,7 +33,6 @@ code {
 }
 
 p { 
-    font-size: 1.1em;
     margin: 0em auto;
 }
 ul { list-style-type: none; padding-left: 0; }
